--- a/OnlineBookStore/pom.xml
+++ b/OnlineBookStore/pom.xml
@@ -44,6 +44,17 @@
 		</dependency>
 
 		<dependency>
+		    <groupId>org.springframework.session</groupId>
+		    <artifactId>spring-session-data-redis</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>biz.paluch.redis</groupId>
+		    <artifactId>lettuce</artifactId>
+		    <version>4.3.1.Final</version>
+		</dependency>
+		
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
